# data-pipeline-kpi-dashboard

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: secret-scan.yml  tests.yml
app/: streamlit_dashboard.py
config/: data_contracts.yaml  settings.yaml
dashboard/: README.md  tableau_dashboard_spec.md
data/processed/dashboard_exports/: lab10.twb
docs/: ROADMAP.md  analytics_models.md  architecture.md  business_case.md  data_contracts.md  data_dictionary.md  data_quality_report.md  deployment.md  future_improvements.md  insights.md  interview_guide.md  kpi_definitions.md  lineage.md  orchestration.md  production_upgrade_plan.md  project_plan.md  quality_diagnosis.md  recruiter_walkthrough.md  run_summary.md
docs/goal_runs/: 2026-05-14_data_engineering_skill_sprint_week01.md
docs/skill_sprint/: week01_sql_foundations_query_pack.sql
models/: schema.yml
models/marts/: mart_customer_segments.sql  mart_monthly_revenue.sql  mart_product_performance.sql
models/staging/: stg_customers.sql  stg_orders.sql  stg_products.sql  stg_returns.sql
orchestration/airflow/: retail_kpi_dag.py
sql/: kpi_queries.sql  schema.sql
src/pipeline/: __init__.py  bootstrap.py  cleaning.py  cli.py  config.py  contracts.py  diagnostics.py  generate_data.py  health.py  kpis.py  lineage.py  load.py  markdown.py  models.py  observability.py  quality.py  run.py
tests/: test_cleaning.py  test_cli.py  test_diagnostics.py  test_health.py  test_models.py  test_pipeline.py
