[project]
name = "data-pipeline-kpi-dashboard"
version = "0.1.0"
description = "BI/Data Engineering portfolio project for sales KPI reporting."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "plotly>=6.0",
    "streamlit>=1.40",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.scripts]
retail-kpi = "pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
